# litkg-rs

./: .cgcignore  .env.example  .gitignore  AGENTS.md  CODEOWNER.md  Cargo.toml  Makefile  README.md  fix_lines.py  fix_tests.py  pyproject.toml
.agents/: AGENTS_INTERNAL_DB.md  issues.toml  resolved.toml  todos.toml
.agents/references/: repo_layout.md
.agents/scripts/: agents_db.py  check_backlog.py  check_scaffold.py  check_skills.py
.agents/skills/autoresearch-litkg-rs/: SKILL.md
.agents/skills/autoresearch-litkg-rs/agents/: openai.yaml
.agents/skills/autoresearch-litkg-rs/references/: repo-comparison.md  upstream-autoresearch.md
.agents/skills/autoresearch-litkg-rs/scripts/: init_run.py  next_trial.py  record_result.py  resume_run.py
.agents/skills/autoresearch-litkg-rs/tests/: test_runtime_scripts.py
.agents/skills/code-review-litkg-rs/: SKILL.md
.agents/skills/code-review-litkg-rs/agents/: openai.yaml
.agents/skills/create-pr/: SKILL.md
.agents/skills/create-pr/agents/: openai.yaml
.agents/skills/gh-issue-lifecycle/: SKILL.md
.agents/skills/gh-issue-lifecycle/agents/: openai.yaml
.agents/skills/gh-issue-lifecycle/references/: issue-structure.md
.agents/skills/litgraph-rs/: SKILL.md
.agents/skills/litkg-rs/: SKILL.md
.agents/work/: claude-work-transcript.md  initial-architecture-debrief.md  issue-0009-native-viewer-mvp.md  issue-0013-benchmark-autoresearch-sync.md  issue-0014-codex-setup.md  litk-review-gpt-55pro.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-backlog-item.yml
crates/litkg-cli/: Cargo.toml
crates/litkg-cli/src/: main.rs
crates/litkg-cli/tests/: inspect_cli.rs
crates/litkg-core/: Cargo.toml
crates/litkg-core/src/: backlog.rs  benchmark.rs  benchmark_runner.rs  bibtex.rs  code_graph.rs  config.rs  context_pack.rs  download.rs  enrich.rs  inspect.rs  lib.rs  manifest.rs  markdown.rs  materialize.rs  memory.rs  model.rs  notebook.rs  ranking.rs  registry.rs  semantic_scholar.rs  tabular.rs  tex.rs
crates/litkg-core/src/identity/: mod.rs  resolution.rs
crates/litkg-core/src/schema/: harness.rs  id.rs  merge.rs  mod.rs  ontology.rs  provenance.rs  record.rs
crates/litkg-core/tests/: test_idempotency.rs  test_markdown.rs  test_resolver.rs  test_schema.rs
crates/litkg-graphify/: Cargo.toml
crates/litkg-graphify/src/: lib.rs
crates/litkg-neo4j/: Cargo.toml
crates/litkg-neo4j/src/: lib.rs
crates/litkg-py/: Cargo.toml
crates/litkg-py/src/: lib.rs
crates/litkg-viewer/: Cargo.toml
crates/litkg-viewer/src/: lib.rs  query.rs
docs/: architecture.md  benchmarks.md  bootstrap-templates.md  codex-setup.md  features.md  kg-stack.md  tooling-and-backends.md
docs/triage/: 2026-04-14-review-issue-bundle.md
examples/: prml-vslam.toml
examples/benchmarks/: integrations.toml  kg.toml  latest-results.toml  sample-results.toml
examples/benchmarks/local_repo_qa/: README.md  aria-nbv.jsonl  catalog.toml  integrations.toml  latest-results.toml  nbv.jsonl  prml-vslam.jsonl  run-plan.toml
examples/benchmarks/local_repo_qa/artifacts/aria-nbv/: answers.jsonl  summary.json  summary.md
examples/benchmarks/local_repo_qa/artifacts/nbv/: answers.jsonl  summary.json  summary.md
examples/benchmarks/local_repo_qa/artifacts/prml-vslam/: answers.jsonl  summary.json  summary.md
infra/neo4j/: docker-compose.yml
python/litkg_rs/: __init__.py
scripts/: loc_stats.py
scripts/benchmarks/: generate_repo_qa_dataset.py  repo_qa_lib.py  run_repo_qa.py
scripts/kg/: down.sh  enrich_embeddings.py  index_code.sh  ingest_docs.sh  load_bundle.py  neo4j_ready.py  ollama_http.py  start_graphiti.sh  up.sh
templates/bootstrap/: AGENTS.md  README.md  REQUIREMENTS.md
