[workspace]
members = [
  "crates/litkg-cli",
  "crates/litkg-core",
  "crates/litkg-py",
  "crates/litkg-graphify",
  "crates/litkg-neo4j",
  "crates/litkg-viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.84"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
arrow-array = "53.3"
arrow-schema = "53.3"
clap = { version = "=4.5.23", features = ["derive"] }
csv = "1.3"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow"] }
flate2 = "1.0"
indexmap = "=2.11.4"
parquet = { version = "53.3", features = ["arrow"] }
petgraph = "0.6.5"
pyo3 = { version = "0.22", features = ["abi3-py39"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "=3.14.0"
toml = "=0.8.8"
ureq = { version = "3.2", features = ["json"] }
walkdir = "2.5"
