[package]
name = "litkg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
litkg-core = { path = "../litkg-core" }
litkg-graphify = { path = "../litkg-graphify" }
litkg-neo4j = { path = "../litkg-neo4j" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "=2.0.14"
tempfile.workspace = true
