[package]
name = "litkg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored = "3.1.1"
comfy-table = "7.2.2"
indicatif = "0.18.4"
glob = "0.3"
litkg-core = { path = "../litkg-core" }
litkg-graphify = { path = "../litkg-graphify" }
litkg-neo4j = { path = "../litkg-neo4j" }
litkg-viewer = { path = "../litkg-viewer" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "=2.0.14"
tempfile.workspace = true
