[package]
name = "litkg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
flate2.workspace = true
indexmap.workspace = true
csv.workspace = true
parquet.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true
