[package]
name = "litkg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
flate2.workspace = true
glob = "0.3"
indexmap.workspace = true
csv.workspace = true
parquet.workspace = true
pulldown-cmark = "0.10"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
slug = "0.1"
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true
cacache = "13.1.0"
sha2 = "0.10.9"
hex = "0.4.3"
