[package]
name = "litkg-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
litkg-core = { path = "../litkg-core" }
pyo3 = { workspace = true, features = ["abi3-py39", "extension-module"] }
serde_json.workspace = true
